--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -39,6 +39,7 @@ input[type="radio"] {
 .services-cards__item {
   width: 25%;
   padding: 20px 20px;
+  border-radius: 15px;
 
   &:hover {
     filter: drop-shadow(0px 5px 11px rgba(0, 0, 0, 0.25));
@@ -99,15 +100,15 @@ input[type="radio"] {
   width: 100%;
 }
 
-.services-cards__button {
-  text-align: center;
-  border-radius: 15px;
-  text-transform: uppercase;
-  font-size: 12px;
-  white-space: nowrap;
-  padding: 15px 20px;
-  margin-top: 20px;
-}
+// .services-cards__button {
+//   text-align: center;
+//   border-radius: 15px;
+//   text-transform: uppercase;
+//   font-size: 12px;
+//   white-space: nowrap;
+//   padding: 15px 20px;
+//   margin-top: 20px;
+// }
 
 .services-cards__button--white {
   font-family: var(--buttons-font);
@@ -142,4 +143,30 @@ input[type="radio"] {
 .services-dedicated__description {
   color: var(--primary-text-color);
   font-size: 14px;
+}
+
+.services-vps__list {
+  gap: 60px;
+  display: flex;
+  justify-content: space-between;
+}
+
+.services-vps__item {
+  width: 25%;
+}
+
+.services-vps__link {
+  text-align: center;
+  width: 100%;
+  color: var(--accent-color);
+  outline: 1px solid var(--accent-color);
+  border-radius: 15px;
+  padding: 10px 15px;
+  white-space: nowrap;
+
+  &:hover {
+    background: linear-gradient(180deg, #144da4, transparent) #4aa7f0;
+    color: var(--secondary-text-color);
+    outline: none;
+  }
 }
